<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ap="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:gravity="fill"
        >

        <TextView
            android:id="@+id/hearing_test_result_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/hearing_test_result_name_placeholder"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="5dp"/>


        <com.androidplot.xy.XYPlot
            android:id="@+id/AudiogramPlot"
            style="@style/APDefacto.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            ap:domainTitle="Frequency (Hz)"
            ap:lineLabels="left|top"
            ap:rangeTitle="Hearing Level (dBHL)"
            ap:lineLabelRotationTop="0"
            ap:lineLabelAlignTop="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/hearing_test_result_rename_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/button_change_name"
                android:layout_weight="2"
                />

            <Button
                android:id="@+id/hearing_test_result_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/button_delete"
                android:layout_weight="2"/>

            <Button
                android:id="@+id/hearing_test_result_share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/button_share"
                android:layout_weight="2"/>

        </LinearLayout>

        <Button
            android:id="@+id/hearing_test_result_eq_preset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/button_export_to_audio_setting"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>